# ikrs-workspace

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  SECURITY.md  firestore.indexes.json  firestore.rules  index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  smoke-test.yml
.output/: 2026-04-11-m1-session-handoff.md  2026-04-11-m2-brainstorm-handoff.md  2026-04-11-m2-phase1-session-handoff.md  2026-04-17-gitleaks-ikrs-workspace.md  2026-04-17-m2-phase4a-session-handoff.md
.output/codex-reviews/: 2026-04-11-embedded-claude-spec-review.md  2026-04-11-m1-milestone-review.md  2026-04-11-m2-phase1-review.md  2026-04-11-m2-phase2-i1i2s2-review.md  2026-04-11-m2-phase2-review.md  2026-04-11-m2-phase3-design-assessment.md  2026-04-11-m2-phase3-scope-review.md  2026-04-11-m2-phase3a-spec-review.md  2026-04-11-m2-phase3a-spec-verification.md  2026-04-16-m2-phase3b-final-review.md  2026-04-16-m2-phase3c-final-review.md  2026-04-16-m2-phase4a-final-review.md  2026-04-16-m2-phase4b-final-review.md  2026-04-17-adversarial-20-flows-audit.md  2026-04-17-bundle-remediation-phase4c-signoff.md  2026-04-17-firebase-identity-auth-fix-review.md  2026-04-17-m2-phase3b-spec-signoff.md  2026-04-17-m2-phase4a-retroactive-signoff.md  2026-04-17-m2-phase4b-retroactive-signoff.md  2026-04-17-m2-phase4c-final-review.md  2026-04-17-m3-milestone-spec-review.md  2026-04-17-m3-phase3a-spec-review.md  2026-04-17-m3-scope-lock-review.md  2026-04-17-m3-scoping-review.md  2026-04-17-ts-strict-null-fix-review.md  2026-04-18-s12-s14-fix-review.md  2026-04-18-token-cache-review.md
docs/: ECOSYSTEM.md
docs/decisions/: 2026-04-17-latest-json-hosting.md
docs/incidents/: 2026-04-23-session-audit.md
docs/operations/: issue-c-orphan-import.md
docs/planning/: 2026-04-17-m3-scope-lock.md  2026-04-17-m3-scoping-brainstorm.md
docs/specs/: 2026-04-18-token-cache.md  embedded-claude-architecture.md  m2-phase3a-session-ux-design.md  m2-phase3b-mcp-wiring-design.md  m2-phase3c-mcp-polish-design.md  m2-phase4a-sandbox-signing-design.md  m2-phase4b-distribution-polish-design.md  m2-phase4c-release-readiness-design.md  m2-phase4d-vault-migration-design.md  m2-phase4e-firebase-identity-signin-design.md  m3-phase-e-autonomous-heartbeat.md  m3-phase-f-token-sync.md  m3-phase-g-proactive-intelligence.md  m3-phase-h-right-hand.md  m3-phase3a-signal-pipeline-design.md  m3-phase4-proactive-claude.md  m3-timesheet-automation.md
docs/ui-audit/: 2026-05-06-i0-baseline.md
heartbeat/: README.md  pyproject.toml
heartbeat/config/: heartbeat.toml.example
heartbeat/scripts/: deploy-to-vm.sh  import-orphan-vault-tasks.py  install.sh  migrate-token-to-firestore.py  smoke-test.sh  uninstall.sh  verify-engagement-account.py
heartbeat/src/heartbeat/: __init__.py  actions.py  config.py  main.py  oauth_bootstrap.py  telemetry.py  tick.py
heartbeat/src/heartbeat/llm/: __init__.py  base.py  factory.py  gemini.py
heartbeat/src/heartbeat/outputs/: __init__.py  audit.py  dispatch.py  firestore.py  secrets.py  telegram.py
heartbeat/src/heartbeat/poller/: __init__.py  main.py  offset.py  queue.py  telegram.py  trigger.py
heartbeat/src/heartbeat/prompts/: __init__.py  tick_prompt_v1.txt
heartbeat/src/heartbeat/signals/: __init__.py  base.py  calendar.py  collect.py  firestore_tokens.py  gmail.py  google_auth.py  state.py  vault.py
heartbeat/systemd/: ikrs-heartbeat-poller.service  ikrs-heartbeat.service  ikrs-heartbeat.timer
heartbeat/tests/: test_f7_regressions.py  test_llm.py  test_migrate_token.py  test_outputs.py  test_poller.py  test_signals_calendar.py  test_signals_collect.py  test_signals_gmail.py  test_signals_google_auth.py  test_signals_state.py  test_signals_vault.py  test_smoke.py  test_tick.py
operations/audit/: right-hand-seed-2026-05-06.jsonl
operations/drafts/: README.md
operations/memory/: README.md
operations/right-hand/: daily-prompt.md
scripts/: build.mjs  check-ecosystem-docs.sh  check-env.mjs  com.ikaros.right-hand.plist  install-pre-commit-hook.sh  right-hand-runner.sh
src/: App.css  App.tsx  Router.tsx  main.tsx
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/claude/: auth.rs  binary_resolver.rs  commands.rs  mcp_config.rs  mod.rs  registry.rs  session_manager.rs  stream_parser.rs  types.rs
src-tauri/src/commands/: calendar_sync.rs  claude.rs  credentials.rs  drive_sync.rs  gmail_sync.rs  heartbeat.rs  mcp.rs  memory_cmd.rs  mod.rs  notes_sync.rs  oauth.rs  task_watch.rs  vault.rs
src-tauri/src/heartbeat/: mod.rs  tick.rs
src-tauri/src/mcp/: manager.rs  mod.rs
src-tauri/src/memory/: mod.rs
src-tauri/src/oauth/: dual_stack.rs  identity_server.rs  mod.rs  pkce.rs  redirect_server.rs  token_cache.rs  token_exchange.rs  token_refresh.rs
src-tauri/src/skills/: commands.rs  mod.rs  scaffold.rs  sync.rs  templates.rs
src/components/: CommandPalette.tsx  OfflineBanner.tsx  UpdateChecker.tsx  ViewErrorBoundary.tsx
src/hooks/: useCalendar.ts  useClaude.ts  useClaudeStream.ts  useDrive.ts  useEngagement.ts  useGmail.ts  useHeartbeatTierI.ts  useNotes.ts  useTaskVaultBridge.ts  useTasks.ts  useWorkspaceSession.ts
src/lib/: briefing.ts  firestore-tokens.ts  mcp-utils.ts  schemas.ts  task-parser.ts  tauri-commands.ts  version-compare.ts
src/providers/: AuthProvider.tsx  EngagementProvider.tsx
src/stores/: claudeStore.ts  costLedgerStore.ts  deskspaceStore.ts  engagementStore.ts  mcpStore.ts  taskStore.ts  uiStore.ts
src/types/: claude.ts  index.ts  skills.ts
src/views/: CalendarView.tsx  ChatView.tsx  ClaudeView.tsx  FilesView.tsx  InboxView.tsx  NotesView.tsx  SettingsView.tsx  TasksView.tsx
tests/: setup.ts
tests/unit/: schemas.test.ts  (+2 more)
(+79 files in other folders)
