[package]
name = "ikrs-workspace"
version = "0.1.0"
description = "A Tauri App"
authors = ["IKAROS <moe@ikaros.ae>"]
edition = "2021"

[lib]
name = "ikrs_workspace_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-keyring = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
notify = "8"
sha2 = "0.10"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
rand = "0.9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
urlencoding = "2"
dirs = "6"
chrono = "0.4"
flate2 = "1"
tar = "0.4"
